--- a/SmartFridge/app/src/main/res/layout/recipies_view.xml
+++ b/SmartFridge/app/src/main/res/layout/recipies_view.xml
@@ -7,6 +7,7 @@ android:layout_height="wrap_content"
     >
 
     <ImageView
+        android:id="@+id/RecImage"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_gravity="center"
@@ -15,6 +16,7 @@ android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"/>
 
     <TextView
+        android:id="@+id/Recname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center|bottom"
