--- a/SmartFridge/app/src/main/res/layout/activity_cam_screen.xml
+++ b/SmartFridge/app/src/main/res/layout/activity_cam_screen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,49 +8,58 @@
     tools:context=".CamScreen">
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:id="@+id/camPhoto"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_weight="14"
         android:scaleY="1.5"
-        android:src="@drawable/food" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="25dp"
-        android:layout_weight="1"
-        android:text="@string/quote1"
-        android:textColor="@color/black"
-        android:textSize="27sp"
-
-        />
+        android:src="@drawable/food"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.7"
-        android:orientation="horizontal"
-        >
+        android:id="@+id/linearLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="70dp"
-            android:layout_weight="1"
-            android:background="@color/colorPrimary"
-            android:text="Recipies"
-            android:onClick="RecipiesButton"
-            android:textSize="25sp"
-             />
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="31dp"
+            app:fabSize="mini"
+            android:backgroundTint="@color/colorPrimary"
+            android:elevation="5dp"
+            android:onClick="RecipesButton"
+            android:src="@drawable/ic_add_black_24dp" />
 
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="70dp"
-            android:layout_weight="1"
-            android:background="@color/colorPrimaryDark"
-            android:text="Contents"
-            android:textSize="25sp" />
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="31dp"
+            app:fabSize="mini"
+            android:backgroundTint="@color/colorPrimary"
+            android:elevation="5dp"
+            android:src="@drawable/ic_add_black_24dp" />
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/add_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="31dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:elevation="5dp"
+            android:src="@drawable/ic_add_black_24dp" />
+
     </LinearLayout>
-</LinearLayout>
+
+
+</android.support.constraint.ConstraintLayout>
