--- a/SmartFridge/app/src/main/res/layout/activity_main.xml
+++ b/SmartFridge/app/src/main/res/layout/activity_main.xml
@@ -1,86 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/f2"
-    >
+    android:background="@drawable/f22">
 
-    
+
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="0dp"
         android:layout_height="210dp"
-        android:layout_marginStart="39dp"
-        android:layout_marginEnd="39dp"
-        android:layout_marginBottom="236dp"
-        android:background="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="38dp"
+        android:layout_marginTop="156dp"
+        android:layout_marginEnd="38dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="1dp"
-            android:layout_marginTop="9dp"
-            android:text="Id"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/editText1"
-            app:layout_constraintStart_toStartOf="@+id/editText1"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/editText1"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="300dp"
+            android:layout_height="54dp"
             android:layout_alignEnd="@+id/editText2"
             android:layout_marginStart="15dp"
             android:layout_marginTop="36dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="78dp"
-            android:background="@color/darkGrey"
+            android:backgroundTint="@color/colorPrimary"
+
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:ems="10"
-            android:hint="id"
+            android:hint="Id"
             android:inputType="textPersonName"
+            android:textColorHint="@color/colorPrimary"
             app:layout_constraintBottom_toTopOf="@+id/sign"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:layout_above="@+id/editText2"
-            android:text="Password"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/editText2"
-            app:layout_constraintStart_toStartOf="@+id/editText2"
-            app:layout_constraintTop_toBottomOf="@+id/editText1" />
+
+
 
         <EditText
             android:id="@+id/editText2"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="300dp"
+            android:layout_height="64dp"
             android:layout_above="@+id/sign"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="59dp"
-            android:background="@color/darkGrey"
+            android:backgroundTint="@color/colorPrimary"
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
+            android:textColorHint="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@+id/editText1"
+            app:layout_constraintVertical_bias="1.0" />
+
 
         <Button
             android:id="@+id/sign"
@@ -91,10 +73,11 @@
             android:layout_marginStart="91dp"
             android:layout_marginEnd="94dp"
             android:layout_marginBottom="11dp"
+            android:background="@drawable/transparent_bg_bordered_button"
             android:gravity="center"
-            android:text="Sign in"
             android:onClick="signIn"
-            android:textColor="@color/colorPrimaryDark"
+            android:text="Sign in"
+            android:textColor="@color/colorPrimary"
             android:textSize="19sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/editText2"
