--- a/SmartFridge/app/src/main/res/layout/activity_recipie_details.xml
+++ b/SmartFridge/app/src/main/res/layout/activity_recipie_details.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
+<LinearLayout
+
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     >
 
@@ -26,11 +30,6 @@
         android:padding="10dp"
         />
 
-    <ListView
-        android:id="@+id/ingredientslist"
-        android:layout_width="wrap_content"
-        android:layout_height="170dp"/>
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="55dp"
@@ -42,4 +41,74 @@
         android:id="@+id/stepslist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Description"
+            android:textSize="25sp"
+            android:textColor="@color/black"
+            android:padding="10dp"/>
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Calories:"
+            android:textSize="22sp"
+            android:textColor="@color/black"
+            android:paddingLeft="12dp"/>
+        <TextView
+            android:id="@+id/calories"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="22sp"
+            tools:text="1000"
+            android:textColor="@color/black"/>
+      </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Good For:"
+            android:textSize="22sp"
+            android:textColor="@color/black"
+            android:paddingLeft="12dp"
+            android:paddingTop="10dp"/>
+          <ListView
+              android:id="@+id/GoodFor"
+              android:layout_width="wrap_content"
+              android:layout_height="match_parent"
+              android:layout_marginLeft="15dp">
+
+          </ListView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bad For:"
+            android:textSize="22sp"
+            android:textColor="@color/black"
+            android:paddingLeft="12dp"
+            android:paddingTop="10dp"/>
+        <ListView
+            android:id="@+id/BadFor"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="15dp">
+
+        </ListView>
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/ingredientslist"
+        android:layout_width="wrap_content"
+        android:layout_height="170dp" />
+
 </LinearLayout>
+</ScrollView>
